--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,8 @@
           player_number = 0,
           camera_position = {x:0, y:0, z:0},
           restart_ball = false,
-          game_ready = false;
+          game_ready = false,
+          start_match = true;
 	</script>
 </head>
 
