--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
           camera_position = {x:0, y:0, z:0},
           restart_ball = false,
           game_ready = false,
-          start_match = true;
+          start_match = false;
 	</script>
 </head>
 
